Fix: Long "Person" type profile field spilling out of input box #21807.
  css properties width, overflow, margin, text-overflow and whitespace to;
  expand up to the width of a "Long text" field, if needed.
 and  abbreviate long  name  with a "...".

Fixes zulip#21807

--- a/static/styles/input_pill.css
+++ b/static/styles/input_pill.css
@@ -1,94 +1,91 @@
 .pill-container {
     display: inline-flex;
     flex-wrap: wrap;
-
     padding: 2px;
     border: 1px solid hsla(0, 0%, 0%, 0.15);
     border-radius: 4px;
     align-items: center;
-
     cursor: text;
+}
 
-    .pill {
-        display: inline-flex;
-        align-items: center;
+.pill-container .pill {
+    display: inline-flex;
+    align-items: center;
+    height: 20px;
+    margin: 1px 2px;
+    color: inherit;
+    border: 1px solid hsla(0, 0, 0, 0.15);
+    border-radius: 4px;
+    background-color: hsla(0, 0, 0, 0.07);
+    cursor: pointer;
+}
 
-        height: 20px;
-        margin: 1px 2px;
+.pill-container .pill:focus {
+    color: hsl(0, 0%, 100%);
+    border: 1px solid hsl(176, 78%, 28%);
+    background-color: hsl(176, 49%, 42%);
+    outline: none;
+}
 
-        color: inherit;
-        border: 1px solid hsla(0, 0%, 0%, 0.15);
+.pill-container .pill .pill-image {
+    height: 20px;
+    width: 20px;
+    border-radius: 4px 0 0 4px;
+}
 
-        border-radius: 4px;
-        background-color: hsla(0, 0%, 0%, 0.07);
-        cursor: pointer;
+.pill-container .pill .pill-value {
+    margin: 0 5px;
+    width: 160px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 
-        &:focus {
-            color: hsl(0, 0%, 100%);
-            border: 1px solid hsl(176, 78%, 28%);
-            background-color: hsl(176, 49%, 42%);
-            outline: none;
-        }
+.pill-container .pill .exit {
+    opacity: 0.5;
+    font-size: 1.3em;
+    margin-right: 3px;
+}
 
-        .pill-image {
-            height: 20px;
-            width: 20px;
-            border-radius: 4px 0 0 4px;
-        }
+.pill-container .pill:hover .exit {
+    opacity: 1;
+}
 
-        .pill-value {
-            margin: 0 5px;
-        }
+.pill-container.not-editable {
+    cursor: not-allowed;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+}
 
-        .exit {
-            opacity: 0.5;
-            font-size: 1.3em;
-            margin-right: 3px;
-        }
+.pill-container.not-editable .pill {
+    padding-right: 4px;
+    cursor: not-allowed;
+}
 
-        &:hover .exit {
-            opacity: 1;
-        }
-    }
+.pill-container.not-editable .pill:focus {
+    color: inherit;
+    border: 1px solid hsla(0, 0, 0, 0.15);
+    background-color: hsla(0, 0, 0, 0.07);
+}
 
-    &.not-editable {
-        cursor: not-allowed;
-        border: none;
-        background-color: transparent;
-        padding: 0;
+.pill-container.not-editable .pill .exit {
+    display: none;
+}
 
-        .pill {
-            padding-right: 4px;
-            cursor: not-allowed;
+.pill-container .input {
+    display: inline-block;
+    padding: 2px 4px;
+    min-width: 2px;
+    word-break: break-all;
+    outline: none;
+}
 
-            &:focus {
-                color: inherit;
-                border: 1px solid hsla(0, 0%, 0%, 0.15);
-                background-color: hsla(0, 0%, 0%, 0.07);
-            }
-
-            .exit {
-                display: none;
-            }
-        }
-    }
-
-    .input {
-        display: inline-block;
-        padding: 2px 4px;
-
-        min-width: 2px;
-        word-break: break-all;
-
-        outline: none;
-
-        &.shake {
-            animation: shake 0.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-            transform: translate3d(0, 0, 0);
-            backface-visibility: hidden;
-            perspective: 1000px;
-        }
-    }
+.pill-container .input.shake {
+    animation: shake 0.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
 }
 
 .pm_recipient .pill-container {
@@ -96,20 +93,20 @@
     border: none;
     flex-grow: 1;
     align-content: center;
+}
 
-    .input {
-        height: 20px;
+.pm_recipient .pill-container .input {
+    height: 20px;
+}
 
-        &:first-child:empty::before {
-            content: attr(data-no-recipients-text);
-            opacity: 0.5;
-        }
-    }
+.pm_recipient .pill-container .input:first-child:empty::before {
+    content: attr(data-no-recipients-text);
+    opacity: 0.5;
+}
 
-    .pill + .input:empty::before {
-        content: attr(data-some-recipients-text);
-        opacity: 0.5;
-    }
+.pm_recipient .pill-container .pill + .input:empty::before {
+    content: attr(data-some-recipients-text);
+    opacity: 0.5;
 }
 
 .deactivated-pill {
@@ -119,11 +116,11 @@
 .add_subscribers_container .pill-container {
     width: 100%;
     background-color: hsl(0, 0%, 100%);
+}
 
-    .input:first-child:empty::before {
-        opacity: 0.5;
-        content: attr(data-placeholder);
-    }
+.add_subscribers_container .pill-container .input:first-child:empty::before {
+    opacity: 0.5;
+    content: attr(data-placeholder);
 }
 
 @keyframes shake {
